# proc_jail

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  proc_jail.pyi  proc_jail_spec_v3.md
.github/workflows/: ci.yml  release.yml
docs/: design-decisions.md  risky-binaries.md  windows.md
python/: Cargo.toml  README.md  pyproject.toml
python/proc_jail/: __init__.py  __init__.pyi
python/src/: lib.rs
python/tests/: test_proc_jail.py
src/: arg_parser.rs  arg_rules.rs  canonical.rs  cwd_policy.rs  double_dash.rs  env_policy.rs  error.rs  file_check.rs  lib.rs  limits.rs  output.rs  policy.rs  prepared.rs  request.rs  risky.rs
tests/: adversarial.rs  integration.rs
