[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "proc_jail"
version = "0.1.0"
description = "Process execution guard for agentic systems"
readme = "../README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
]
keywords = ["security", "process", "sandbox", "injection", "agentic"]

[project.urls]
Repository = "https://github.com/tenuo-ai/proc_jail"
Documentation = "https://github.com/tenuo-ai/proc_jail#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "proc_jail._proc_jail"
